force-app/main/default/objects/Landing_Sync__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>inwise Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>inwise Landing Sync</relationshipLabel>
    <relationshipName>inwise_Landing_Sync</relationshipName>
    <type>Lookup</type>
</CustomField>