force-app/main/default/objects/Landing_Sync__c/fields/Automation_Id__c.field-meta.xml
<CustomField>
    <fullName>Automation_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Automation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>