force-app/main/default/objects/Landing_Sync__c/fields/Landing_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Id__c</fullName>
    <label>Landing Page/Popup Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>