force-app/main/default/objects/Landing_Sync__c/fields/Landing_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Landing Page/Popup Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>