force-app/main/default/objects/Landing_Sync__c/fields/Last_JobId__c.field-meta.xml
<CustomField>
    <fullName>Last_JobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last JobId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>