force-app/main/default/objects/Landing_Sync__c/fields/Last_JobName__c.field-meta.xml
<CustomField>
    <fullName>Last_JobName__c</fullName>
    <label>Last JobName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>