force-app/main/default/objects/Landing_Sync__c/fields/Record_Index__c.field-meta.xml
<CustomField>
    <fullName>Record_Index__c</fullName>
    <label>Record Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>